<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.fbulou.swipeem.InvoiceActivity"
    tools:showIn="@layout/activity_invoice">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_checkout_ripple">
        <!--  <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_invoice"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_img" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/product_name_invoice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/demo_leather_shoes"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.6"
                                android:text="Unit Price"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/mrp_invoice"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="₹ 999"
                                android:textColor="#000"
                                android:textSize="17sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.6"
                                android:text="Quantity"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/qty_invoice"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="1"
                                android:textColor="#000"
                                android:textSize="17sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.6"
                                android:text="Shipping Charges"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/shipping_charges_invoice"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="₹ 49"
                                android:textColor="#000"
                                android:textSize="17sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.6"
                                android:text="Tax"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/tax"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="₹ 10"
                                android:textColor="#000"
                                android:textSize="17sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="5dp"
                        android:background="#ccc" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.6"
                            android:text="Payable Amount"
                            android:textColor="#000"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/amount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="₹ 1058"
                            android:textColor="#000"
                            android:textSize="17sp" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="Shipping Details"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/full_name_invoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="Demo Name"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/email_invoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="Demo Email"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/shipping_address_invoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="Demo Shipping Address"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/city_invoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="Demo City"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/state_invoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="Demo State"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pincode_invoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="Demo Pincode"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/_91"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/phone_no_invoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Demo Phone no."
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_checkout_ripple"
        app:mrl_rippleColor="@android:color/white"
        android:layout_alignParentBottom="true"
        app:mrl_rippleDuration="200"
        app:mrl_rippleOverlay="true">

        <Button
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#c2ff0000"
            android:padding="20dp"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />
    </com.balysv.materialripple.MaterialRippleLayout>
</RelativeLayout>
